fixxing gap between message-chairman and instagram

--- a/styles/instagram.css
+++ b/styles/instagram.css
@@ -1,5 +1,5 @@
 .instagram {
-  margin-top: 2rem;
+  /* margin-top: 2rem; */
 }
 .instagram-id {
   margin-left: 13rem;
